cambiado todo ig